pyReScene 0.4 (2013-02-)
=============

 * pyReScene Auto: Fixing.Frank.2002.DVDRip.XviD-EXViD srr could not create
 * pyReScene Auto: infinite loop on The.Haunting.1963.DVDRip.XviD-FRAGMENT
 * ReSample: No sample recreation for MKV files with attachments (bug #2)
 * ReSample: Die.Simpsons.S04E02.....iNTERNAL-UTOPiA
   main AVI file with multiple audio tracks: the sample could not rebuild
 
pyReScene 0.3 (2013-02-07)
=============

 * pyReScene Auto: -l parameter added to report sample issues
 * pyReScene Auto: CD1.srr files were created in certain cases
 * pyReScene Auto: Subservience.2007.BDRip.XviD-DOCUMENT wasn't detected
   as a release
 * pyReScene Auto: -c flag works again
 * pyReScene Auto: FIX-release inside release dir made it fail
 * ReScene: -e output bug for RAR end block fixed

pyReScene 0.2 (2013-02-05)
=============

 * ReScene: OpenSubtitles.org hashes are stored while creating SRR files
 * BUG: reconstructing RARs with old style recovery records works (bug #1)
 * PyPy support: it runs faster than with CPython
 * EXE files for Windows available
 
pyReScene 0.1 (2013-01-14)
=============

pyReScene Auto: (pyrescene.py)
 * Initial version. It can automatically create a complete SRR file.
 * No write access to the release directory is required. This means it works
   with DVDs. It also guarantees that nothing in the processed directories
   will change. (not a guarantee of awescript)
 * -s parameter verifies sample against main movie files. If this fails it will
   still try to create an SRS file.
 * -r parameter to recursively create SRR files.
 * -c parameter will create SRRs for compressed RAR files.
 * .ext.txt text files for corrupt samples. They show the error and the
   file size.

ReScene: (srr)
 * Initial version. Changes since ReScene .NET 1.2:
 * Asks for confirmation before overwriting an SRR file.
 * Ability to replace missing file data with zero bytes when reconstructing:
   reconstruct with missing files.